# ECE420

./: CMakeLists.txt  audio_amplifier_setting.98374  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bt_app_avrc.c  bt_app_lcd.c  bt_app_lcd.h  main.c
